--- a/excursions/templates/excursions/excursions.html
+++ b/excursions/templates/excursions/excursions.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
 <link rel="stylesheet" href="{% static 'excursions/css/excursions.css'%}">
 <link rel="stylesheet" href="{% static 'excursions/css/gallery.css'%}">
+<link rel="stylesheet" href="{% static 'main/css/main_media.css'%}">
 {% endblock %}
 {% block title%}Экскурсии{% endblock %}
 {% block content %}
@@ -12,6 +13,30 @@
 <main>
     <div class="container">
         <div class="excursion">
+            <div class="menu__mobile">
+                    <div class="menu__mobile_burger">
+                        <div class="menu_mobile_inner">
+                            <div class="nemu_burger_lines"></div>
+                        </div>
+                    </div>
+                    <div class="mobile__menu-nav">
+
+                        <div class="mobile__menu_nav_list">
+                            <a class="mobile__menu_logo" href="/">
+                                <img class="mobile__menu_logo-img" src="{% static 'main/img/logo.png' %}">
+                            </a>
+                            <a href="#" class="mobile__menu_btn">
+                                <div class="mobile__cross"></div>
+                            </a>
+                            <a class="mobile__menu_link" href="#">Контакты</a>
+                            <a class="mobile__menu_link" href="#">О нас</a>
+                            <a href="#" class="mobile__menu_link">Контакты</a>
+                            <a class="mobile__menu_link" href="{% url 'gallery'%}">Что посмотреть?</a>
+                        </div>
+
+                    </div>
+
+                </div>
             <nav class="menu">
                 <a href="#" class="menu__link">
                     <img class="logo__img" src="{% static 'main/img/logo.png'%}">
@@ -27,14 +52,32 @@
                 <h2 class="excursion__title">Выберите экскурсию</h2>
                 <ul class="query__excursion">
                     {% for excursion in excursions %}
+                    {% if excursion.custom %}
                     <li class="query__excursion_item">
-                        <a class="query__excursion_link" href="{% url 'excursion_item' excursion.id  %}">
+                        <div class="query__excursion_link" href="{% url 'excursion_item' excursion.id  %}">
+                            <span id="excursion_id" type="hidden">{{excursion.id}}</span>
+                            <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
+                            <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
+                            <div class="custom__price_block">
+                                <p class="custom__text">укажите сумму</p>
+                                <p class="custom_text">минимум 3000</p>
+                                <input class="custom__price_input js_custom_input">
+
+                            </div>
+                            <a class="query__excursion_price js_custom__price_link " href="#">Далее</a>
+                            <span></span>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="query__excursion_item">
+                        <a class="query__excursion_link js_excursion_link" href="{% url 'excursion_item' excursion.id  %}">
                             <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
                             <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
                             <p class="query__excursion_text">{{ excursion.description|slice:"300" }}{% if excursion.description|length > 300 %}...{% endif %}</p>
                             <p class="query__excursion_price">Монета {{excursion.price}} руб.</p>
                         </a>
                     </li>
+                    {% endif %}
                     {% endfor %}
                 </ul>
             </section>
@@ -42,50 +85,9 @@
     </div>
 </main>
 
-
-
-
-
-<!--<main>-->
-<!--    <div class="container">-->
-<!--        <div class="excursion">-->
-<!--            <h2 class="excursion__title">Выберите экскурсию</h2>-->
-<!--            <p class="excursion__description">Купив монету вы получаете бесплатную обзорную экскурсию</p>-->
-
-<!--            <div class="hidden"></div>-->
-<!--            <section class="popups">-->
-<!--                <div class="phone">-->
-<!--                    <h2 class="phone__title">Уважаемый Друг, подтвердите свой номер телефона, вам придёт СМС с-->
-<!--                        кодом</h2>-->
-
-<!--                    <div class="phone__form">-->
-<!--                        <label for="phone">укажите свой номер телефона</label>-->
-<!--                        <input id="phone" type="text" class="phone__input">-->
-<!--                        <div class="phone_btn" name="phone_form">подтвердить</div>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--                <div class="code">-->
-<!--                    <div class="code__wrapper">-->
-<!--                        <p class="code__description">В течение 30 секунд, Вам придёт СМС с 4-х значным кодом, введите его в-->
-<!--                            поле под этим текстом.-->
-<!--                            Тем самым Вы подтвердите свой номер телефона, затем ожидайте второе СМС с <b>кодом экскурсии</b>,-->
-<!--                            после покупки монеты покажите-->
-<!--                            <b>код экскурии</b> нашему экскурсоводу и вы получите право на бесплатную экскурсию.</p>-->
-<!--                        <input id="code" type="text" maxlength="4" class="phone__input limitInput">-->
-<!--                    </div>-->
-<!--                </div>-->
-
-<!--            </section>-->
-
-
-
-<!--        </div>-->
-<!--    </div>-->
-
-<!--</main>-->
 {% endblock%}
 
 {%block scripts %}
 <script type="text/javascript" src="{% static 'excursions/js/excursions.js' %}"></script>
+<script type="text/javascript" src="{% static 'main/js/main.js' %}"></script>
 {% endblock %}
