--- a/excursions/templates/excursions/point_gallery.html
+++ b/excursions/templates/excursions/point_gallery.html
@@ -3,7 +3,9 @@
 {% load static %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
+<link rel="stylesheet" href="{% static 'excursions/css/excursions.css'%}">
 <link rel="stylesheet" href="{% static 'excursions/css/gallery.css'%}">
+<link rel="stylesheet" href="{% static 'main/css/main_media.css'%}">
 {% endblock %}
 {% block title%}Галерея{% endblock %}
 {% block content %}
@@ -34,16 +36,33 @@
                     <h1 class="point__title">Маршрут экскурсий куда входит {{point.name}}</h1>
                     {% endif %}
                     <ul class="query__excursion">
-                        {% for excursion in excursions %}
-                        <li class="query__excursion_item">
-                            <a class="query__excursion_link" href="{% url 'excursion_item' excursion.id %}">
-                                <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
-                                <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
-                                <p class="query__excursion_text">{{ excursion.description|slice:"200" }}{% if excursion.description|length > 200 %}...{% endif %}</p>
-                                <p class="query__excursion_price">Монета {{excursion.price}} руб.</p>
-                            </a>
-                        </li>
-                        {% endfor %}
+                    {% for excursion in excursions %}
+                    {% if excursion.custom %}
+                    <li class="query__excursion_item">
+                        <div class="query__excursion_link" href="{% url 'excursion_item' excursion.id  %}">
+                            <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
+                            <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
+                            <div class="custom__price_block">
+                                <p class="custom__text">укажите сумму</p>
+                                <p class="custom_text">минимум 3000</p>
+                                <input class="custom__price_input js_custom_input">
+
+                            </div>
+                            <a class="query__excursion_price js_custom__price_link " href="{% url 'excursion_item' excursion.id  %}">Далее</a>
+                            <span></span>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="query__excursion_item">
+                        <a class="query__excursion_link js_excursion_link" href="{% url 'excursion_item' excursion.id  %}">
+                            <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
+                            <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
+                            <p class="query__excursion_text">{{ excursion.description|slice:"300" }}{% if excursion.description|length > 300 %}...{% endif %}</p>
+                            <p class="query__excursion_price">Монета {{excursion.price}} руб.</p>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
                     </ul>
                 </section>
 
@@ -53,4 +72,5 @@
 {% endblock%}
 {% block scripts %}
 <script type="text/javascript" src="{% static 'excursions/js/gallery.js' %}"></script>
+<script type="text/javascript" src="{% static 'excursions/js/excursions.js' %}"></script>
 {% endblock %}
