--- a/excursions/static/excursions/css/gallery.css
+++ b/excursions/static/excursions/css/gallery.css
@@ -60,9 +60,6 @@
     height: 100%;
 }
 
-.point__content{
-    padding-top: 100px;
-}
 
 .point__title{
     text-align: center;
@@ -106,6 +103,7 @@
 .query__excursion_link{
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .query__excursion_img{
@@ -128,6 +126,20 @@
     color: yellow;
     font-size: 22px;
     padding-top: 10px;
+    position: relative;
+}
+
+.query__excursion_link span{
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    filter: blur(25px);
+    z-index: 10;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background: var(--white);
 }
 
 .excursion__item{
@@ -233,4 +245,5 @@
     padding: 5px;
     text-align: center;
     visibility: hidden;
+    text-align: center;
 }
