--- a/main/static/main/css/main.css
+++ b/main/static/main/css/main.css
@@ -101,6 +101,127 @@
     height: 100vh;
 }
 
+.menu__mobile{
+    width: 100%;
+    position:relative;
+    height: 70px;
+}
+.menu__mobile_burger{
+    position:absolute;
+    top: 10px;
+    right: 10px;
+    width: 60px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.menu__mobile_burger{
+    display: none;
+}
+
+.menu_mobile_inner{
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+.menu_mobile_inner::after,
+.menu_mobile_inner::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    background: #fff;
+    border-radius: 5px;
+}
+.menu_mobile_inner::after{
+    top: 20px;
+    left: 0px;
+}
+
+.menu_mobile_inner::before{
+    top: 40px;
+    left: 0px;
+}
+
+.mobile__menu-nav{
+    width: 300px;
+    background: var(--white);
+    height: 100vh;
+    position: absolute;
+    top:0;
+    right:0px;
+    display: none;
+    z-index: 10;
+
+}
+.mobile__menu_nav_list{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: column;
+    position: relative;
+}
+.mobile__menu_logo{
+    width: 70px;
+    margin-bottom: 30px;
+    margin: 0 auto;
+    display: block;
+}
+.mobile__menu_logo-img{
+    width:70px;
+    margin-bottom: 30px;
+
+}
+
+.mobile__menu_link{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    padding-left: 30px;
+    position: relative;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.mobile__menu_link:hover{
+    border-bottom: 2px solid #131313;
+}
+
+.mobile__menu_btn{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 5px;
+    right: 5px;
+}
+
+.mobile__cross{
+    position: relative;
+    width:100%;
+    height: 10px;
+    background: #131313;
+    border-radius: 5px;
+    transform: rotate(-45deg);
+    top: 25px;
+    left: 0;
+
+}
+
+.mobile__cross::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    height:10px;
+    border-radius: 5px;
+    transform: rotate(90deg);
+    background: #131313;
+}
+
 .menu{
     position: fixed;
     top:0;
