--- a/static/excursions/css/excursions.css
+++ b/static/excursions/css/excursions.css
@@ -17,8 +17,6 @@
 }
 
 .excursion{
-
-    padding-top: 50px;
     background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(233,53,8,0.8183648459383753) 100%, rgba(0,212,255,1) 100%);
     width: 100%;
     height: 100%;
@@ -157,4 +155,20 @@
 .code__description{
     text-align: center;
     margin-bottom: 30px;
+}
+
+.custom__price_block{
+    min-height: 165px;
+    text-align: center;
+    padding-top: 30px;
+
+}
+
+.custom__price_input{
+    width: 50%;
+    height: 50px;
+    border:2px solid var(--red);
+    border-radius: 5px;
+    font-size: 40px;
+    font-weight: 700;
 }
