--- a/excursions/templates/excursions/excursions.html
+++ b/excursions/templates/excursions/excursions.html
@@ -49,7 +49,7 @@
                 </ul>
             </nav>
             <section class="point__content">
-                <h2 class="excursion__title">Выберите экскурсию</h2>
+                <h2 class="excursion__title">Выберите жетон</h2>
                 <ul class="query__excursion">
                     {% for excursion in excursions %}
                     {% if excursion.custom %}
@@ -58,6 +58,7 @@
                             <span id="excursion_id" type="hidden">{{excursion.id}}</span>
                             <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
                             <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
+
                             <div class="custom__price_block">
                                 <p class="custom__text">укажите сумму</p>
                                 <p class="custom_text">минимум 3000</p>
@@ -70,12 +71,18 @@
                     </li>
                     {% else %}
                     <li class="query__excursion_item">
-                        <a class="query__excursion_link js_excursion_link" href="{% url 'excursion_item' excursion.id  %}">
+                        <div class="query__excursion_link ">
                             <img src="{% get_media_prefix %}{{excursion.photo}}" class="query__excursion_img">
                             <p class="query__excursion_text"><b>{{excursion.name}}</b></p>
-                            <p class="query__excursion_text">{{ excursion.description|slice:"300" }}{% if excursion.description|length > 300 %}...{% endif %}</p>
-                            <p class="query__excursion_price">Монета {{excursion.price}} руб.</p>
-                        </a>
+                            <p class="custom__text">кол-во человек</p>
+                            <div class="count_human_block">
+                                <div class="count_human_plus js_button_plus"></div>
+                                <div class="count_human_window">1</div>
+                                <div class="count_human_minus js_button_minus"></div>
+                            </div>
+                            <p class="query__excursion_text">{{ excursion.description|slice:"200" }}{% if excursion.description|length > 200 %}...{% endif %}</p>
+                            <a class="query__excursion_price js_excursion_link href='{% url 'excursion_item' excursion.id  %}'">Монета {{excursion.price}} руб.</a>
+                        </div>
                     </li>
                     {% endif %}
                     {% endfor %}
