--- a/main/templates/main/main_ex.html
+++ b/main/templates/main/main_ex.html
@@ -27,7 +27,7 @@
                             </a>
                             <a class="mobile__menu_link" href="#">Контакты</a>
                             <a class="mobile__menu_link" href="#">О нас</a>
-                            <a class="mobile__menu_link" href="{% url 'excursions'%}">Экскурсии</a>
+                            <a class="mobile__menu_link" href="{% url 'excursions'%}">Маршруты</a>
                             <a class="mobile__menu_link" href="{% url 'gallery'%}">Что посмотреть?</a>
                         </div>
 
@@ -42,7 +42,7 @@
 
                         <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
-                        <li class="menu__item"><a href="{% url 'excursions'%}" class="menu__link">Экскурсии</a></li>
+                        <li class="menu__item"><a href="{% url 'excursions'%}" class="menu__link">Маршруты</a></li>
                         <li class="menu__item"><a href="{% url 'gallery'%}" class="menu__link">Что посмотреть?</a></li>
                     </ul>
                 </nav>
