--- a/excursions/templates/excursions/excur_gallery.html
+++ b/excursions/templates/excursions/excur_gallery.html
@@ -29,7 +29,7 @@
                             <a href="{% url 'main'%}" class="mobile__menu_link">Главная</a>
                             <a href="#" class="mobile__menu_link">Контакты</a>
                             <a href="#" class="mobile__menu_link">О нас</a>
-                            <a href="{% url 'excursions'%}" class="mobile__menu_link">Экскурсии</a>
+                            <a href="{% url 'excursions'%}" class="mobile__menu_link">Маршруты</a>
                         </div>
 
                     </div>
@@ -43,7 +43,7 @@
                     <li class="menu__item"><a href="{% url 'main'%}" class="menu__link">Главная</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                     <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
-                    <li class="menu__item"><a href="{% url 'excursions'%}" class="menu__link">Экскурсии</a></li>
+                    <li class="menu__item"><a href="{% url 'excursions'%}" class="menu__link">Маршруты</a></li>
                 </ul>
             </nav>
             <section class="gallery__content">
