--- a/excursions/templates/excursions/excur_item.html
+++ b/excursions/templates/excursions/excur_item.html
@@ -74,7 +74,7 @@
 
                     <div class="pay__widget">
                         <p> здесь будет виджет системы оплаты </p>
-                        <a href="/" class="popup__pay_btn js_success_pay">успешная оплата</a>
+                        <a href="#" class="popup__pay_btn js_success_pay">успешная оплата</a>
 
                     </div>
 
