--- a/excursions/static/excursions/css/excursions.css
+++ b/excursions/static/excursions/css/excursions.css
@@ -23,8 +23,12 @@
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    position:relative;
 
 }
+
+
+
 .phone__title,
 .excursion__title{
     text-align: center;
@@ -95,6 +99,13 @@
 }
 .phone{
     visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
+
+
+
 }
 
 
@@ -111,6 +122,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border: 3px solid var(--red);
 
 }
 
@@ -132,7 +144,8 @@
     border: solid 3px #131313;
     border-radius: 5px;
     cursor:pointer;
-
+    font-weight: 700;
+    color: var(--white);
 }
 
 .code{
@@ -152,7 +165,9 @@
     background: var(--white);
     border-radius: 5px;
     padding: 5px;
+    border: 3px solid var(--red);
 }
+
 .code__description{
     text-align: center;
     margin-bottom: 30px;
@@ -163,7 +178,7 @@
 }
 
 .custom__price_block{
-    min-height: 165px;
+    min-height: 240px;
     text-align: center;
     padding-top: 30px;
 
@@ -235,4 +250,15 @@
     font-weight: 700;
     font-size: 40px;
     color: var(--red);
+}
+
+.inner_popup{
+    width: 100%;
+    height: 100%;
+    background: var(--white);
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: blur(5px);
+    opacity: 0.9;
 }
