--- a/excursions/static/excursions/css/gallery.css
+++ b/excursions/static/excursions/css/gallery.css
@@ -42,6 +42,8 @@
 .gallery__link_img{
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
+    width: 220px;
+    height: 150px;
 }
 
 .gallery__link_description{
@@ -57,7 +59,7 @@
     background: rgb(2,0,36);
     background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(22,121,9,1) 35%, rgba(0,212,255,1) 100%);
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 
