--- a/main/static/main/css/main_media.css
+++ b/main/static/main/css/main_media.css
@@ -63,6 +63,15 @@
         width: 80%;
     }
 }
+@media(max-width: 600px){
+    .cart_container{
+        width: 330px;
+    }
+}
+
+
+
+cart_container
 
 
 
