--- a/main/templates/main/main_ex.html
+++ b/main/templates/main/main_ex.html
@@ -1,6 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 {% block css %}
+<link rel="stylesheet" href="{% static 'excursions/css/excursions.css'%}">
 <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
 <link rel="stylesheet" href="{% static 'excursions/css/gallery.css'%}">
 <link rel="stylesheet" href="{% static 'main/css/main_media.css'%}">
@@ -9,6 +10,24 @@
 {% block content %}
     <main>
         <div class="container">
+                       <div class="phone" id="scroll_phone">
+                <div class="inner_popup"></div>
+                <div class="phone__form">
+                    <label for="phone">укажите свой номер телефона</label>
+                    <input id="phone" type="text" class="phone__input" placeholder="79998887766">
+                    <div class="phone_btn" name="phone_form">подтвердить</div>
+                </div>
+                <div class="code">
+                    <div class="code__wrapper">
+                        <p class="code__description">В течение 30 секунд, Вам придёт СМС с 4-х значным кодом, введите его в
+                            поле под этим текстом.
+                            Тем самым Вы подтвердите свой номер телефона.</p>
+                        <input id="user_phone" type="hidden" maxlength="4" class="phone__input">
+                        <input id="code" type="text" maxlength="4" class="phone__input limitInput">
+                        <p class="text__error"></p>
+                    </div>
+                </div>
+            </div>
             <div class="excursion">
                 <div class="menu__mobile">
                     <div class="menu__mobile_burger">
@@ -29,6 +48,15 @@
                             <a class="mobile__menu_link" href="#">О нас</a>
                             <a class="mobile__menu_link" href="{% url 'excursions'%}">Маршруты</a>
                             <a class="mobile__menu_link" href="{% url 'gallery'%}">Что посмотреть?</a>
+                            {% if request.user.is_authenticated %}
+                            <a href="{% url 'cart' request.user.id %}" class="cart_link js_cart_link">
+                                <img class="cart_img" src="{% static 'main/img/shoppingcart.svg' %}">
+                            </a>
+                            {% else %}
+                            <a href="#scroll_phone" class="cart_link js_cart_check_phone">
+                                <img class="cart_img" src="{% static 'main/img/shoppingcart.svg' %}">
+                            </a>
+                            {% endif %}
                         </div>
 
                     </div>
@@ -39,11 +67,21 @@
                         <img class="logo__img" src="{% static 'main/img/logo.png'%}">
                     </a>
                     <ul class="menu__list">
-
                         <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                         <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
                         <li class="menu__item"><a href="{% url 'excursions'%}" class="menu__link">Маршруты</a></li>
                         <li class="menu__item"><a href="{% url 'gallery'%}" class="menu__link">Что посмотреть?</a></li>
+                        <li class="menu__item">
+                            {% if request.user.is_authenticated %}
+                            <a href="{% url 'cart' request.user.id %}" class="cart_link js_cart_link">
+                                <img class="cart_img" src="{% static 'main/img/shoppingcart.svg' %}">
+                            </a>
+                            {% else %}
+                            <a href="#" class="cart_link js_cart_check_phone">
+                                <img class="cart_img" src="{% static 'main/img/shoppingcart.svg' %}">
+                            </a>
+                            {% endif %}
+                        </li>
                     </ul>
                 </nav>
                 <div class="excursion__content">
@@ -64,4 +102,5 @@
 {% endblock %}
 {% block scripts %}
 <script type="text/javascript" src="{% static 'main/js/main.js' %}"></script>
+<script type="text/javascript" src="{% static 'excursions/js/excursions.js' %}"></script>
 {% endblock %}
